# IA_Juris

./: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: raw
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
scripts/: deploy.py  setup_database.py  train_model.py
src/: __init__.py
src/api/: main.py
src/api/middleware/: __init__.py  auth.py  rate_limiter.py
src/api/routes/: __init__.py  documents.py  queries.py  training.py
src/config/: __init__.py  logging_config.py  settings.py
src/core/: __init__.py  document_processor.py  embeddings.py  hyde_retriever.py  logging_setup.py  rag_pipeline.py  vector_store.py
src/models/: __init__.py  base.py  document.py  query.py  schemas.py
src/services/: __init__.py  document_processor.py  qa_service.py  summarization.py  training_service.py
src/training/: __init__.py  data_preparation.py  evaluation.py  fine_tuning.py
src/utils/: __init__.py  text_processing.py  validators.py
